<resources>
    <string name="app_name">ulp_moviles_practico_7</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="menu_llamar">LLamar</string>
    <string name="menu_mifoto">Mi Foto</string>
    <string name="menu_salir">Salir</string>
    <string name="mi_foto">Mi Foto</string>
</resources>