<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ubicacion">

    <fragment
        android:id="@+id/nav_ubicacion"
        android:name="com.a2valdez.ulp_moviles_practico_7.ui.ubicacion.UbicacionFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/nav_mimusica"
        android:name="com.a2valdez.ulp_moviles_practico_7.ui.mimusica.MiMusicaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_mi_musica" />

    <fragment
        android:id="@+id/nav_salir"
        android:name="com.a2valdez.ulp_moviles_practico_7.ui.salir.SalirFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_salir" />
</navigation>